fix images not showing bug

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h1 {
     border-radius: 3px;
     display: block;
     margin: 0 auto;
-    height: 2em;
+    height: 2.3em;
 }
 
 .input-label {
@@ -103,7 +103,7 @@ h1 {
 
 .output-box {
     width: 100px;
-    height: 2em;
+    height: 0.8em;
     border: 1px solid black;
     padding: 0 0 2.3em 0.7em;
     margin: 2.5em auto;
@@ -124,7 +124,7 @@ h1 {
     position:relative;
     border-radius: 5px;
     cursor: pointer;
-    width: 5em;
+    width: 6em;
     height: 2.3em;
     margin: 0.5em auto 1em auto;
     color: white;
